force-app/main/default/objects/cgc_sync__Sync_Tracked_Object_Config__c/cgc_sync__Sync_Tracked_Object_Config__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Custom setting to track the objects to maintain in the mobile app</description>
    <label>Tracked Object Config</label>
</CustomObject>