force-app/main/default/objects/cgc_sync__Sync_Tracked_Object_Config__c/fields/cgc_sync__Active__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Stores true value when the tracked object is active.</description>
    <inlineHelpText>Determines if the tracked object data is synced directly or through rules defined in the Named Fetched Trees.</inlineHelpText>
    <label>Sync Object Data</label>
    <type>Checkbox</type>
</CustomField>