force-app/main/default/objects/cgc_sync__Sync_Tracked_Object_Config__c/fields/cgc_sync__Allow_Null__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Allow_Null__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Switch to allow null values instead of default datatype values in the offline database.</description>
    <inlineHelpText>Select this checkbox to allow a user to enter null values for a field from their mobile device.</inlineHelpText>
    <label>Allow Null Value</label>
    <type>Checkbox</type>
</CustomField>