force-app/main/default/objects/cgc_sync__Sync_Tracked_Object_Config__c/fields/cgc_sync__Batch_SOQL_Param_Chunk_Size__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Batch_SOQL_Param_Chunk_Size__c</fullName>
    <description>Batch SOQL parameter chunk size (in bytes).</description>
    <label>Batch SOQL Param Chunk Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>