force-app/main/default/objects/cgc_sync__Sync_Tracked_Object_Config__c/fields/cgc_sync__ClientApp_ID__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__ClientApp_ID__c</fullName>
    <defaultValue>&apos;Standard&apos;</defaultValue>
    <description>Installation ID of the device.</description>
    <label>ClientApp Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>