force-app/main/default/objects/cgc_sync__Sync_Tracked_Object_Config__c/fields/cgc_sync__Custom_Index_List2__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Custom_Index_List2__c</fullName>
    <description>Define a custom set of indexes, List2 for the current object.</description>
    <label>Custom Index List2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>