force-app/main/default/objects/cgc_sync__Sync_Tracked_Object_Config__c/fields/cgc_sync__Dependent_Lookups__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Dependent_Lookups__c</fullName>
    <description>Dependent lookups.</description>
    <label>Dependent Lookups</label>
    <type>TextArea</type>
</CustomField>