force-app/main/default/objects/cgc_sync__Sync_Tracked_Object_Config__c/fields/cgc_sync__Displayable__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Displayable__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If checked, this object will be displayed in the mobile app.</description>
    <inlineHelpText>If checked, this object will be displayed in the app</inlineHelpText>
    <label>Displayable</label>
    <type>Checkbox</type>
</CustomField>