force-app/main/default/objects/cgc_sync__Sync_Tracked_Object_Config__c/fields/cgc_sync__Enable_Enhanced_Delta_Sync__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Enable_Enhanced_Delta_Sync__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Sets the value to true when delta sync is checked.</description>
    <inlineHelpText>When this option is selected, tracked objects are included in the first manual sync of the day. Tracked object records that aren’t relevant to the user are removed, and records that are relevant to the user, but haven’t been added yet, are added. Recommended for experienced admins.</inlineHelpText>
    <label>First Sync of Day</label>
    <type>Checkbox</type>
</CustomField>