force-app/main/default/objects/cgc_sync__Sync_Tracked_Object_Config__c/fields/cgc_sync__Fieldset_Name_List__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Fieldset_Name_List__c</fullName>
    <description>Comma separated list of field-sets names for the object.</description>
    <label>Fieldset Name List</label>
    <length>255</length>
    <type>Text</type>
</CustomField>