force-app/main/default/objects/cgc_sync__Sync_Tracked_Object_Config__c/fields/cgc_sync__Layout_Needed__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Layout_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if this layout is needed in the mobile app.</description>
    <label>LayoutNeeded</label>
    <type>Checkbox</type>
</CustomField>