force-app/main/default/objects/cgc_sync__Sync_Tracked_Object_Config__c/fields/cgc_sync__List_Header_Fieldset__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__List_Header_Fieldset__c</fullName>
    <description>List header field set.</description>
    <label>List Header Fieldset</label>
    <type>TextArea</type>
</CustomField>