force-app/main/default/objects/cgc_sync__Sync_Tracked_Object_Config__c/fields/cgc_sync__Max_Records_Before_Full_Sync__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Max_Records_Before_Full_Sync__c</fullName>
    <defaultValue>1000</defaultValue>
    <description>Threshold when the device will switch to full sync instead of sync single records.</description>
    <label>Max Records Before Full Sync</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>