force-app/main/default/objects/cgc_sync__Sync_Tracked_Object_Config__c/fields/cgc_sync__On_the_Road_Sync__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__On_the_Road_Sync__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Only tracked objects that are flagged for On The Road Sync are synced.</description>
    <label>On the Road Sync</label>
    <type>Checkbox</type>
</CustomField>