force-app/main/default/objects/cgc_sync__Sync_Tracked_Object_Config__c/fields/cgc_sync__Only_Metadata_Needed__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Only_Metadata_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Only metadata is allowed and no data is downloaded for this tracked object.</description>
    <label>Only Metadata Needed</label>
    <type>Checkbox</type>
</CustomField>