force-app/main/default/objects/cgc_sync__Sync_Tracked_Object_Config__c/fields/cgc_sync__Order_By__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Order_By__c</fullName>
    <description>Defines the value for ORDER BY</description>
    <label>Order By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>