force-app/main/default/objects/cgc_sync__Sync_Tracked_Object_Config__c/fields/cgc_sync__SF_Rest_Enabled__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__SF_Rest_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Use Salesforce Rest API to download tracked object records.</description>
    <inlineHelpText>Use Salesforce Rest API to download tracked object records.</inlineHelpText>
    <label>Enable Salesforce Standard Rest API</label>
    <type>Checkbox</type>
</CustomField>