force-app/main/default/objects/cgc_sync__Sync_Tracked_Object_Config__c/fields/cgc_sync__Sync_Overview__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Sync_Overview__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Shows up in sync overview.</description>
    <label>Sync Overview</label>
    <type>Checkbox</type>
</CustomField>