force-app/main/default/objects/cgc_sync__Sync_Tracked_Object_Config__c/fields/cgc_sync__Sync_Overview_Condition_Field__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Sync_Overview_Condition_Field__c</fullName>
    <description>Condition to show up this record in sync overview screen as pending upload.</description>
    <label>Sync_Overview Condition Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>