force-app/main/default/objects/cgc_sync__Sync_Tracked_Object_Config__c/fields/cgc_sync__Sync_Overview_Condition_Operator__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Sync_Overview_Condition_Operator__c</fullName>
    <description>Conditional operators (IN, &gt;, &lt;, =, !=)</description>
    <label>Sync Overview Condition Operator</label>
    <length>255</length>
    <type>Text</type>
</CustomField>