force-app/main/default/objects/cgc_sync__Sync_Tracked_Object_Config__c/fields/cgc_sync__Sync_Overview_Condition_Value__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Sync_Overview_Condition_Value__c</fullName>
    <description>Sync overview condition value.</description>
    <label>Sync Overview Condition Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>