force-app/main/default/objects/cgc_sync__Sync_Tracked_Object_Config__c/fields/cgc_sync__Tracked_Relationship__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Tracked_Relationship__c</fullName>
    <description>Relation to another tracked object to indicate dependencies. It can be evaluated by the client to propagate sync states from child to parent records.</description>
    <label>Tracked Relationship</label>
    <length>255</length>
    <type>Text</type>
</CustomField>