force-app/main/default/objects/cgc_sync__Sync_Tracked_Object_Config__c/fields/cgc_sync__Tracking_enabled__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Tracking_enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to identify if tracked relationship needs to be considered. If unchecked existing tracked relationship is ignored.</description>
    <label>Tracking enabled</label>
    <type>Checkbox</type>
</CustomField>