force-app/main/default/objects/cgc_sync__Sync_Tracked_Object_Config__c/fields/cgc_sync__Where_2__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Where_2__c</fullName>
    <description>Second part of the where clause.</description>
    <label>Where_2</label>
    <type>TextArea</type>
</CustomField>