force-app/main/default/objects/cgc_sync__Sync_Tracked_Object_Config__c/fields/cgc_sync__Where__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Where__c</fullName>
    <description>Value of the where clause.</description>
    <label>Where</label>
    <type>TextArea</type>
</CustomField>